| Summary: | ASTERISK-28604: app_meetme, chan_ooh323 and cdr_mysql don't build on 17.0.0 | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2019-10-28 09:53:55 | Date Closed: | 2019-11-07 08:33:34.000-0600 |
| Priority: | Blocker | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/app_meetme |
| Versions: | 17.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {noformat}
In file included from app_meetme.c:75: app_meetme.c: In function ‘meetme_stasis_init’: app_meetme.c:1168:3: error: implicit declaration of function ‘ast_channel_topic_all_cached’; did you mean ‘ast_channel_topic_all’? [-Werror=implicit-function-declaration] 1168 | ast_channel_topic_all_cached()); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ /usr/src/asterisk/asterisk/include/asterisk/stasis_message_router.h:60:76: note: in definition of macro ‘stasis_message_router_create’ 60 | #define stasis_message_router_create(topic) __stasis_message_router_create(topic, __FILE__, __LINE__, __PRETTY_FUNCTION__) | ^~~~~ app_meetme.c:1168:3: error: passing argument 1 of ‘__stasis_message_router_create’ makes pointer from integer without a cast [-Werror=int-conversion] 1168 | ast_channel_topic_all_cached()); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | | | int /usr/src/asterisk/asterisk/include/asterisk/stasis_message_router.h:60:76: note: in definition of macro ‘stasis_message_router_create’ 60 | #define stasis_message_router_create(topic) __stasis_message_router_create(topic, __FILE__, __LINE__, __PRETTY_FUNCTION__) | ^~~~~ /usr/src/asterisk/asterisk/include/asterisk/stasis_message_router.h:58:31: note: expected ‘struct stasis_topic *’ but argument is of type ‘int’ 58 | struct stasis_message_router *__stasis_message_router_create( | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ {noformat} | ||
| Comments: | By: George Joseph (gjoseph) 2019-10-29 08:33:17.522-0500 cdr_mysql doesn't build on 13 or 16 either. By: Friendly Automation (friendly-automation) 2019-11-07 08:33:35.314-0600 Change 13144 merged by Friendly Automation: cdr_mysql: Fix missing use of 'my_bool' with MySql >= 8.0.1 [https://gerrit.asterisk.org/c/asterisk/+/13144|https://gerrit.asterisk.org/c/asterisk/+/13144] By: Friendly Automation (friendly-automation) 2019-11-07 08:41:30.706-0600 Change 13181 merged by Friendly Automation: Build: Fix compile issues with seldom used modules [https://gerrit.asterisk.org/c/asterisk/+/13181|https://gerrit.asterisk.org/c/asterisk/+/13181] By: Friendly Automation (friendly-automation) 2019-11-07 09:43:31.505-0600 Change 13145 merged by George Joseph: cdr_mysql: Fix missing use of 'my_bool' with MySql >= 8.0.1 [https://gerrit.asterisk.org/c/asterisk/+/13145|https://gerrit.asterisk.org/c/asterisk/+/13145] By: Friendly Automation (friendly-automation) 2019-11-07 11:22:28.027-0600 Change 13143 merged by George Joseph: Build: Fix compile issues with seldom used modules [https://gerrit.asterisk.org/c/asterisk/+/13143|https://gerrit.asterisk.org/c/asterisk/+/13143] By: Friendly Automation (friendly-automation) 2019-12-18 06:29:50.188-0600 Change 13440 merged by Friendly Automation: configure: Add check for MySQL client bool and my_bool type usage. [https://gerrit.asterisk.org/c/asterisk/+/13440|https://gerrit.asterisk.org/c/asterisk/+/13440] By: Friendly Automation (friendly-automation) 2019-12-18 06:40:24.368-0600 Change 13462 merged by Joshua C. Colp: configure: Add check for MySQL client bool and my_bool type usage. [https://gerrit.asterisk.org/c/asterisk/+/13462|https://gerrit.asterisk.org/c/asterisk/+/13462] By: Friendly Automation (friendly-automation) 2019-12-18 06:40:48.057-0600 Change 13448 merged by Joshua C. Colp: configure: Add check for MySQL client bool and my_bool type usage. [https://gerrit.asterisk.org/c/asterisk/+/13448|https://gerrit.asterisk.org/c/asterisk/+/13448] By: Friendly Automation (friendly-automation) 2019-12-18 06:41:15.073-0600 Change 13461 merged by Joshua C. Colp: configure: Add check for MySQL client bool and my_bool type usage. [https://gerrit.asterisk.org/c/asterisk/+/13461|https://gerrit.asterisk.org/c/asterisk/+/13461] By: Friendly Automation (friendly-automation) 2019-12-18 07:01:06.403-0600 Change 13463 merged by Friendly Automation: configure: Add check for MySQL client bool and my_bool type usage. [https://gerrit.asterisk.org/c/asterisk/+/13463|https://gerrit.asterisk.org/c/asterisk/+/13463] By: Friendly Automation (friendly-automation) 2019-12-18 07:07:30.678-0600 Change 13464 merged by Friendly Automation: configure: Add check for MySQL client bool and my_bool type usage. [https://gerrit.asterisk.org/c/asterisk/+/13464|https://gerrit.asterisk.org/c/asterisk/+/13464] By: Friendly Automation (friendly-automation) 2019-12-18 07:15:11.021-0600 Change 13465 merged by Friendly Automation: configure: Add check for MySQL client bool and my_bool type usage. [https://gerrit.asterisk.org/c/asterisk/+/13465|https://gerrit.asterisk.org/c/asterisk/+/13465] | ||